--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.35.6",
+    "@supabase/ui": "^0.36.5",
+    "@tailwindcss/typography": "^0.5.4",
+    "autoprefixer": "^10.4.8",
+    "easymde": "^2.16.1",
     "next": "12.2.5",
+    "postcss": "^8.4.16",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.3",
+    "react-simplemde-editor": "^5.0.2",
+    "tailwindcss": "^3.1.8",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.21.0",
